--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Nomina/Create.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Nomina/Create.cshtml
@@ -8,103 +8,154 @@
 <h1>Create</h1>
 
 <h4>Nomina</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="EmpresaId" class="control-label"></label>
-                <select asp-for="EmpresaId" class ="form-control" asp-items="ViewBag.EmpresaId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaPago" class="control-label"></label>
-                <input asp-for="FechaPago" class="form-control" />
-                <span asp-validation-for="FechaPago" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SatPeriocidadPagoId" class="control-label"></label>
-                <select asp-for="SatPeriocidadPagoId" class ="form-control" asp-items="ViewBag.SatPeriocidadPagoId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="PeriodoId" class="control-label"></label>
-                <select asp-for="PeriodoId" class ="form-control" asp-items="ViewBag.PeriodoId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="SatTipoContratoId" class="control-label"></label>
-                <select asp-for="SatTipoContratoId" class ="form-control" asp-items="ViewBag.SatTipoContratoId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="NominaExtraordinariaId" class="control-label"></label>
-                <input asp-for="NominaExtraordinariaId" class="form-control" />
-                <span asp-validation-for="NominaExtraordinariaId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConceptoNomina" class="control-label"></label>
-                <input asp-for="ConceptoNomina" class="form-control" />
-                <span asp-validation-for="ConceptoNomina" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConceptoTimbrado" class="control-label"></label>
-                <input asp-for="ConceptoTimbrado" class="form-control" />
-                <span asp-validation-for="ConceptoTimbrado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TotalTrabajadores" class="control-label"></label>
-                <input asp-for="TotalTrabajadores" class="form-control" />
-                <span asp-validation-for="TotalTrabajadores" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TotalPercepciones" class="control-label"></label>
-                <input asp-for="TotalPercepciones" class="form-control" />
-                <span asp-validation-for="TotalPercepciones" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TotalDeducciones" class="control-label"></label>
-                <input asp-for="TotalDeducciones" class="form-control" />
-                <span asp-validation-for="TotalDeducciones" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Extraordinaria" /> @Html.DisplayNameFor(model => model.Extraordinaria)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Generada" /> @Html.DisplayNameFor(model => model.Generada)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Autorizada" /> @Html.DisplayNameFor(model => model.Autorizada)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Timbrada" /> @Html.DisplayNameFor(model => model.Timbrada)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Cerrada" /> @Html.DisplayNameFor(model => model.Cerrada)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="Estatus" class="control-label"></label>
-                <input asp-for="Estatus" class="form-control" />
-                <span asp-validation-for="Estatus" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="form-group">
+        <button type="submit" class="btn btn-primary">Crear</button>
+        <a asp-action="Index" class="btn btn-secondary">Volver</a>
     </div>
-</div>
+<hr />
 
-<div>
-    <a asp-action="Index">Volver</a>
+
+
+<style>
+    /* Alineación vertical de los botones */
+    .btn {
+        display: inline-block; /* Permite que los botones se alineen horizontalmente */
+        vertical-align: middle; /* Alinea los botones verticalmente al centro */
+        margin: 5px; /* Espacio uniforme alrededor de cada botón */
+    }
+
+    /* Estilos adicionales para dar formato y coherencia */
+    .btn-primary, .btn-secondary {
+        padding: 10px 20px; /* Espaciado interno más amplio para mejor clicabilidad */
+        font-size: 16px; /* Tamaño de fuente uniforme para ambos botones */
+        border-radius: 5px; /* Bordes redondeados */
+        text-shadow: 0 1px 1px rgba(0,0,0,0.2); /* Sombra en el texto para profundidad */
+        box-shadow: 0 2px 5px rgba(0,0,0,0.3); /* Sombra alrededor del botón para efecto 3D */
+        transition: all 0.3s ease; /* Transición suave para cambios de estado */
+    }
+
+    .btn-primary {
+        color: #fff; /* Texto blanco para mayor contraste */
+        background-color: #007bff; /* Fondo azul para el botón 'Save' */
+        border-color: #007bff; /* Borde azul a juego */
+    }
+
+        .btn-primary:hover, .btn-primary:focus {
+            background-color: #0056b3; /* Fondo más oscuro al interactuar */
+            border-color: #004085; /* Borde más oscuro al interactuar */
+        }
+
+    .btn-secondary {
+        color: #fff; /* Texto blanco para mayor contraste */
+        background-color: #6c757d; /* Fondo gris para el botón 'Back to List' */
+        border-color: #6c757d; /* Borde gris a juego */
+    }
+
+        .btn-secondary:hover, .btn-secondary:focus {
+            background-color: #545b62; /* Fondo más oscuro al interactuar */
+            border-color: #4e555b; /* Borde más oscuro al interactuar */
+        }</style>
+
+
+<div class="container">
+    <form asp-action="Create">
+        <div class="row">
+            <!-- Primera columna -->
+            <div class="col-md-6">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="EmpresaId" class="control-label"></label>
+                    <select asp-for="EmpresaId" class="form-control" asp-items="ViewBag.EmpresaId"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FechaPago" class="control-label"></label>
+                    <input asp-for="FechaPago" class="form-control" />
+                    <span asp-validation-for="FechaPago" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SatPeriocidadPagoId" class="control-label"></label>
+                    <select asp-for="SatPeriocidadPagoId" class="form-control" asp-items="ViewBag.SatPeriocidadPagoId"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PeriodoId" class="control-label"></label>
+                    <select asp-for="PeriodoId" class="form-control" asp-items="ViewBag.PeriodoId"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SatTipoContratoId" class="control-label"></label>
+                    <select asp-for="SatTipoContratoId" class="form-control" asp-items="ViewBag.SatTipoContratoId"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="NominaExtraordinariaId" class="control-label"></label>
+                    <input asp-for="NominaExtraordinariaId" class="form-control" />
+                    <span asp-validation-for="NominaExtraordinariaId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ConceptoNomina" class="control-label"></label>
+                    <input asp-for="ConceptoNomina" class="form-control" />
+                    <span asp-validation-for="ConceptoNomina" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ConceptoTimbrado" class="control-label"></label>
+                    <input asp-for="ConceptoTimbrado" class="form-control" />
+                    <span asp-validation-for="ConceptoTimbrado" class="text-danger"></span>
+                </div>
+            </div>
+
+            <!-- Segunda columna -->
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="TotalTrabajadores" class="control-label"></label>
+                    <input asp-for="TotalTrabajadores" class="form-control" />
+                    <span asp-validation-for="TotalTrabajadores" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TotalPercepciones" class="control-label"></label>
+                    <input asp-for="TotalPercepciones" class="form-control" />
+                    <span asp-validation-for="TotalPercepciones" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TotalDeducciones" class="control-label"></label>
+                    <input asp-for="TotalDeducciones" class="form-control" />
+                    <span asp-validation-for="TotalDeducciones" class="text-danger"></span>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="Extraordinaria" /> @Html.DisplayNameFor(model => model.Extraordinaria)
+                    </label>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="Generada" /> @Html.DisplayNameFor(model => model.Generada)
+                    </label>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="Autorizada" /> @Html.DisplayNameFor(model => model.Autorizada)
+                    </label>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="Timbrada" /> @Html.DisplayNameFor(model => model.Timbrada)
+                    </label>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="Cerrada" /> @Html.DisplayNameFor(model => model.Cerrada)
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Estatus" class="control-label"></label>
+                    <input asp-for="Estatus" class="form-control" />
+                    <span asp-validation-for="Estatus" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+  
+    </form>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
