--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/NominaDetalle/Delete.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/NominaDetalle/Delete.cshtml
@@ -2,111 +2,95 @@
 
 @{
     ViewData["Title"] = "Delete";
+
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1 class="text-center">Confirmación de Eliminación</h1>
+<h3 class="text-center text-danger">¿Está seguro de que desea eliminar este registro?</h3>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>NominaDetalle</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoIncapacidadId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoIncapacidadId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DiasPagados)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DiasPagados)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HorasExtra)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HorasExtra)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Importe)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Importe)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Gravado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Gravado)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Exento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Exento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsraPagar)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsraPagar)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BaseImpuesto)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BaseImpuesto)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoCaptura)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoCaptura)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comentarios)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comentarios)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estatus)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estatus)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Empresa)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Empresa.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Incidencia)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Incidencia.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Periodo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Periodo.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Trabajador)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Trabajador.Id)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="container mt-3">
+    <div class="text-center mb-4">
+        <form asp-action="Delete" method="post" class="d-inline">
+            <input type="hidden" asp-for="Id" />
+            <button type="submit" class="btn btn-danger btn-lg">Confirmar Eliminación</button>
+            <a asp-action="Index" class="btn btn-secondary btn-lg">Cancelar</a>
+        </form>
+    </div>
+
+    <div class="card">
+        <div class="card-header bg-danger text-white">
+            Información del NominaDetalle a ELIMINAR
+        </div>
+        <div class="card-body">
+            <div class="row info-container">
+                <div class="col-md-4">
+                    <h5>Datos Generales</h5>
+                    <p><strong>Días Pagados:</strong> @Html.DisplayFor(model => model.DiasPagados)</p>
+                    <p><strong>Horas Extra:</strong> @Html.DisplayFor(model => model.HorasExtra)</p>
+                    <p><strong>Importe:</strong> $@Html.DisplayFor(model => model.Importe)</p>
+                    <p><strong>Gravado:</strong> $@Html.DisplayFor(model => model.Gravado)</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Datos Fiscales</h5>
+                    <p><strong>Exento:</strong> $@Html.DisplayFor(model => model.Exento)</p>
+                    <p><strong>ISR a Pagar:</strong> $@Html.DisplayFor(model => model.IsraPagar)</p>
+                    <p><strong>Base de Impuesto:</strong> $@Html.DisplayFor(model => model.BaseImpuesto)</p>
+                    <p><strong>Tipo de Captura:</strong> @Html.DisplayFor(model => model.TipoCaptura)</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Comentarios y Estado</h5>
+                    <p><strong>Comentarios:</strong> @Html.DisplayFor(model => model.Comentarios)</p>
+                    <p><strong>Estatus:</strong> @Html.DisplayFor(model => model.Estatus)</p>
+                    <p><strong>Empresa:</strong> @Html.DisplayFor(model => model.Empresa.Id)</p>
+                    <p><strong>Periodo:</strong> @Html.DisplayFor(model => model.Periodo.Id)</p>
+                </div>
+            </div>
+            <div class="row row-divider info-container">
+                <div class="col-md-6">
+                    <h5>Relación con Incidencias</h5>
+                    <p><strong>Incidencia:</strong> @Html.DisplayFor(model => model.Incidencia.Id)</p>
+                    <p><strong>Trabajador:</strong> @Html.DisplayFor(model => model.Trabajador.Id)</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            Por favor, revise la información cuidadosamente antes de proceder con la eliminación.
+        </div>
+    </div>
 </div>
+
+<style>
+    .text-danger {
+        color: #dc3545;
+    }
+
+    .btn-danger {
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
+    .btn-secondary {
+        background-color: #6c757d;
+        border-color: #6c757d;
+    }
+
+    .info-container {
+        font-size: 18px;
+        line-height: 1.8;
+    }
+
+    .row-divider {
+        margin-top: 20px;
+    }
+
+    h5 {
+        font-weight: bold;
+        text-decoration: underline;
+    }
+
+    .btn-lg {
+        padding: 10px 20px;
+        font-size: 18px;
+    }
+</style>
