--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Shared/_Layout.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
                             <i id="payrollArrow" class="fas fa-chevron-right arrow-right"></i>
                         </a>
                         <ul id="payroll" class="submenu">
-                            <li><a href="@Url.Action("Generate", "Payroll")"><i class="fas fa-plus-circle icon-left"></i> Generar Nómina</a></li>
-                            <li><a href="@Url.Action("Index", "Payroll")"><i class="fas fa-list icon-left"></i> Ver Nóminas</a></li>
+                            <li><a href="@Url.Action("Create", "Nomina")"><i class="fas fa-plus-circle icon-left"></i> Generar Nómina</a></li>
+                            <li><a href="@Url.Action("Index", "NominaDetalle")"><i class="fas fa-list icon-left"></i> Detalle Nomina</a></li>
                         </ul>
                     </li>
                     <!-- Sección de Gestión con su menú desplegable -->
@@ -52,11 +52,8 @@
                             <i id="gestionArrow" class="fas fa-chevron-right arrow-right"></i>
                         </a>
                         <ul id="gestion" class="submenu">
-                            <li><a href="@Url.Action("CreateUser", "Admin")"><i class="fas fa-user-plus icon-left"></i> Agregar Usuario</a></li>
-                            <li><a href="@Url.Action("ListUsers", "Admin", new { id = 1 })"><i class="fas fa-user icon-left"></i> Ver Usuario</a></li>
-                            <li><a href="@Url.Action("EditAllUsersInfo", "Admin", new { id = 1 })"><i class="fas fa-edit icon-left"></i> Editar Información de Usuarios</a></li>
+                            <li><a href="@Url.Action("Index", "Trabajadores", new { id = 1 })"><i class="fas fa-user icon-left"></i> Ver Usuario</a></li>
                             <li><a href="@Url.Action("CompanyInfo", "Admin")"><i class="fas fa-building icon-left"></i> Información de la Empresa</a></li>
-                            <li><a href="@Url.Action("AreaGeograficas")"><i class="fas fa-building icon-left"></i>AreasGeograficas</a></li>
                         </ul>
                     </li>
                     <li>
@@ -65,7 +62,7 @@
                             <i id="gestionArrow" class="fas fa-chevron-right arrow-right"></i>
                         </a>
                         <ul id="gestion-empresa" class="submenu">
-                            <li><a href="@Url.Action("Trabajadores", "Admin")"><i class="fas fa-user-plus icon-left"></i>Trabajadores</a></li>
+                            <li><a href="@Url.Action("Index", "Empresas")"><i class="fas fa-building icon-left"></i>Empresa</a></li>
                     </li>
                 </ul>
 
